--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,11 @@
                     <div id="show_chat" class="options_button">
                         <i class="fa fa-comment"></i>
                     </div>
+                    <div id = "invite_button" class = "options_button">
+                        <i class = "fas fa-user-plus"></i>
+                    </div>
                 </div>
+
             </div>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-3 right-window">
